--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '1.3-0' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,37 +9,39 @@ package:
 source:
   fn: urca_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/urca_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/urca/urca_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/urca_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/urca/urca_{{ version }}.tar.gz
   sha256: 621cc82398e25b58b4a16edf000ed0a1484d9a0bc458f734e97b6f371cc76aaa
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 2
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('fortran') }}        # [unix]
-    - {{ compiler('m2w64_fortran') }}  # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
+    - {{ compiler('c') }}        # [not win]
+    - {{ compiler('fortran') }}  # [not win]
+    - {{native}}toolchain        # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
     - r-nlme
-
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
     - r-nlme
 
 test:
   commands:
-    - $R -e "library('urca')"  # [not win]
+    - $R -e "library('urca')"           # [not win]
     - "\"%R%\" -e \"library('urca')\""  # [win]
 
 about:
@@ -49,8 +50,14 @@ about:
   summary: Unit root and cointegration tests encountered in applied  econometric analysis are
     implemented.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - daler
+    - jdblischak
+    - cbrueffer
+    - dbast
